# ECSFM

./: .gitignore  AGENTS.md  README.md  config.json  dataset_cache.npy  pyproject.toml  surrogate_model.eqx
.codex/environments/: environment.toml
data/comsol_reference/: README.md
examples/: cv_playground.py
notebooks/: nature_01_simulator_correctness.ipynb  nature_02_dataset_generation_scenarios.ipynb  nature_03_canonical_scenarios_visualization.ipynb  nature_04_posterior_identifiability_calibration.ipynb  nature_05_posterior_ablation_frontier.ipynb  nature_06_posterior_failure_modes_protocol_design.ipynb
scripts/: cv_playground.py  infer_posterior.py  modal_pipeline.py  report_echem_benchmarks.py  report_multiphysics_benchmarks.py  run_experimental_scenarios.py  run_nature_evidence_suite.py  run_verification.py  tune_surrogate.py  verify_surrogate.py  visualizer.py
src/ecsfm/analysis/: __init__.py  evidence.py
src/ecsfm/data/: generate.py  (+1 more)
tests/: conftest.py  test_analysis_evidence.py  test_cv.py  test_dataset_inspector.py  test_dataset_qc.py  test_echem_benchmarks.py  test_eval_conditioning.py  test_eval_scoring.py  test_experiment.py  test_generate_alignment.py  test_generate_chunk_indexing.py  test_graded_mesh.py  test_kinetics.py  test_mesh.py  test_multiphysics.py  test_multiphysics_benchmarks.py  test_partial_observation_training.py  test_physics_cottrell.py  test_posterior.py  test_potential.py  test_reactions.py  test_sensor.py  test_simulator_scenarios.py  test_timestepping.py  test_train_config.py  test_transport.py  test_verification.py
(+24 files in other folders)
