[project]
name = "ecsfm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Satyam Tiwary", email = "satyam@technoculture.io" }
]
requires-python = ">=3.11"
dependencies = [
    "equinox>=0.11.10",
    "jax>=0.4.30",
    "jaxlib>=0.4.30",
    "jaxtyping>=0.2.36",
    "matplotlib>=3.9.4",
    "modal>=0.65.0",
    "optax>=0.2.4",
    "pydantic>=2.0.0",
    "pytest>=8.4.2",
    "scikit-learn>=1.8.0",
    "tqdm>=4.66.0",
]

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"
